Update API Swagger
