# app/domains/matakuliah/matakuliah.router.js
@@ -4,5 +4,6 @@ const mkRouter = express.Router();
 const mkController = require("./matakuliah.controller");
 
 mkRouter.post("/add", mkController.add);
+mkRouter.post("/remove", mkController.remove);
 
 module.exports = mkRouter;
