# app/domains/users/user.router.js
@@ -1,8 +1,13 @@
-const express = require('express');
+const express = require("express");
 const userRouter = express.Router();
 
-const authRouter = require('./auth/user.auth.routes');
+const authRouter = require("./auth/user.auth.routes");
 
-userRouter.use('/auth', authRouter);
+const userControl = require("./user.controller");
+
+userRouter.use("/auth", authRouter);
+
+userRouter.post("/remove", userControl.remove);
 
 module.exports = userRouter;
+
